--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.17.3",
     "express-mongo-sanitize": "^2.2.0",
     "helmet": "^5.0.2",
+    "joi": "^17.6.0",
     "mongoose": "^6.3.0",
     "morgan": "^1.10.0"
   }
