--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express-mongo-sanitize": "^2.2.0",
     "helmet": "^5.0.2",
     "joi": "^17.6.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.0",
     "morgan": "^1.10.0"
   }
